--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,13 @@
     --primary-dark-bg: #1e2430;
     --dark-text: #cdcdcf;
 
+    /*  breakpoints  */
+    --breakpoint-sm: 640px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 1024px;
+    --breakpoint-xl: 1280px;
+    --breakpoint-2xl: 1536px;
+
 }
 
 /* Default webpage font and colors */
