--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
     --code-text-color: #e8eef9;
     --input-border-color: #bfbfbf;
     --placeholder-color: #595959;
+    --text-color: #ffffff;
 
     /* DarkMode */
     --primary-dark-bg: #1e2430;
@@ -40,7 +41,30 @@
     --breakpoint-xl: 1280px;
     --breakpoint-2xl: 1536px;
 
+    /* Transition properties */
+    --theme-transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+/* Dark mode variabel-override */
+.dark-mode {
+    /* Light scheme ax default */
+    color-scheme: dark;
+
+    /* Colors */
+    --primary-bg: #1e2430;
+    --secondary-bg: #2d3748;
+    --code-bg: #1a202c;
+
+    /* Navbar specifik */
+    --nav-bg: #111827;
+    --Btn-bg: #2d3748;
+
+    /* Text och border färger */
+    --text-color: #cdcdcf;
+    --input-border-color: #4a5568;
+    --placeholder-color: #a0aec0;
+}
+
 
 /* Default webpage font and colors */
 html,
@@ -50,7 +74,8 @@ body {
     font-family: 'Roboto', 'Josefin Sans', sans-serif;
     line-height: 1.5;
     background: var(--primary-bg);
-    color: #ffffff;
+    color: var(--text-color);
+    transition: var(--theme-transition);
 
     /* Additional Utility Classes */
     box-sizing: border-box;
@@ -63,4 +88,42 @@ h1 {
 
 h2 {
     font-family: 'Josefin Sans', sans-serif;
+}
+
+/* Custom Scrollbar Styling */
+/*  Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--accent-orange-color) var(--secondary-bg);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--secondary-bg);
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: var(--accent-orange-color);
+    background: linear-gradient(180deg, var(--accent-orange-color) 0%, var(--accent1-orange-color) 100%);
+    border-radius: 10px;
+    border: 3px solid var(--secondary-bg);
+    transition: all 0.3s ease;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background: var(--accent1-orange-color);
+}
+
+/* For dark mode adaptation */
+.dark-mode *::-webkit-scrollbar-track {
+    background: var(--secondary-bg);
+}
+
+.dark-mode *::-webkit-scrollbar-thumb {
+    border-color: var(--secondary-bg);
 }
